Major wheel loader system updates
- Added UWB (Ultra-Wideband) positioning system support
  - New NoopLoop LinkTrack UWB driver implementation
  - EKF2 integration for UWB-based positioning
  - UWB anchor configuration and initialization scripts
  - Updated SensorUwb message format

- Enhanced articulated chassis control systems
  - Refactored load-aware torque distribution module
  - Improved predictive traction control
  - Updated slip estimator with enhanced algorithms
  - Enhanced steering controller with better parameter handling
  - Terrain adaptation system improvements

- Servo system enhancements
  - Updated ST3125 servo driver with improved feedback
  - Renamed ServoFeedback to RoboticServoFeedback for clarity
  - Enhanced servo control algorithms

- Board configuration updates
  - Updated CUAV X7Plus-WL and X7Pro board configurations
  - Enhanced HKUST NXT dual wheel loader configurations
  - Improved sensor and actuator mapping documentation

- Documentation and build improvements
  - Added comprehensive UWB integration documentation
  - Updated coding style guidelines
  - Enhanced build system configuration

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -252,9 +252,11 @@ set(msg_files
 	TerrainAdaptation.msg
 	ModuleStatus.msg
 	SensorQuadEncoder.msg
-	ServoFeedback.msg
+	RoboticServoFeedback.msg
 	RoboticServoCommand.msg
 	Wind.msg
+	WheelLoaderSetpoint.msg
+	WheelLoaderStatus.msg
 	YawEstimatorStatus.msg
 	versioned/ActuatorMotors.msg
 	versioned/ActuatorServos.msg
