--- a/src/modules/articulated_chassis/steering_controller/CMakeLists.txt
+++ b/src/modules/articulated_chassis/steering_controller/CMakeLists.txt
@@ -1,6 +1,6 @@
 ############################################################################
 #
-#   Copyright (c) 2024 PX4 Development Team. All rights reserved.
+#   Copyright (c) 2025 PX4 Development Team. All rights reserved.
 #
 # Redistribution and use in source and binary forms, with or without
 # modification, are permitted provided that the following conditions
@@ -32,12 +32,13 @@
 ############################################################################
 
 px4_add_module(
-	MODULE modules__articulated_chassis__steering_controller
-		MAIN steering_controller
-	STACK_MAIN 2048
-	SRCS
-		steering_controller.cpp
-		steering_controller_main.cpp
-	DEPENDS
-		mathlib
-)
+    MODULE modules__articulated_chassis__steering_controller
+    MAIN steering_controller
+    STACK_MAIN 2048
+    SRCS
+        steering_controller.cpp
+	steering_controller_main.cpp
+    DEPENDS
+        px4_work_queue
+        mathlib
+    )
