Reset CUAV X7Plus-WL board configuration and refactor wheel loader modules
- Reset X7Plus-WL board config to remove wheel loader specific changes
- Standardize board configuration files to match upstream PX4
- Refactor wheel loader controller module structure
- Update message definitions for wheel loader commands
- Clean up boom control and articulated chassis modules
- Add new wheel loader controller design documentation
- Remove deprecated wheel loader files and reorganize module structure

--- a/msg/CMakeLists.txt
+++ b/msg/CMakeLists.txt
@@ -215,6 +215,7 @@ set(msg_files
 	SensorAirflow.msg
 	SystemPower.msg
 	TakeoffStatus.msg
+	TaskExecutionCommand.msg
 	TaskStackInfo.msg
 	TecsStatus.msg
 	TelemetryStatus.msg
@@ -242,7 +243,10 @@ set(msg_files
 	VehicleTorqueSetpoint.msg
 	VelocityLimits.msg
 	WheelEncoders.msg
+	WheelDriveCommand.msg
 	WheelSpeedsSetpoint.msg
+	WheelStatus.msg
+	SteeringCommand.msg
 	SteeringSetpoint.msg
 	SteeringStatus.msg
 	SlipEstimation.msg
@@ -256,6 +260,7 @@ set(msg_files
 	RoboticServoFeedback.msg
 	RoboticServoCommand.msg
 	Wind.msg
+	WheelLoaderCommand.msg
 	WheelLoaderSetpoint.msg
 	WheelLoaderStatus.msg
 	YawEstimatorStatus.msg
